最初のコミット ロゴとリンクだけ

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
+    "build:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt build",
+    "generate:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt generate",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "yarn lint:js",
@@ -21,6 +23,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "cross-env": "^7.0.3",
     "eslint-plugin-vue": "^7.2.0",
     "nuxt": "^2.14.6"
   },
