--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jest": "^26.5.0",
     "lint-staged": "^10.4.0",
     "prettier": "^2.1.2",
+    "push-dir": "^0.4.1",
     "vue-jest": "^3.0.4"
   }
 }
