--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "core-js": "^3.6.5",
     "cross-env": "^7.0.3",
     "eslint-plugin-vue": "^7.2.0",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "nuxt-webfontloader": "^1.1.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
